--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,10 @@
     "topthink/framework": "^6.0.0",
     "topthink/think-orm": "^2.0",
     "firebase/php-jwt": "^6.1",
-    "hprose/hprose": "^2.0"
+    "hprose/hprose": "^2.0",
+    "topthink/think-multi-app": "^1.0",
+    "ext-json": "*",
+    "topthink/think-view": "^1.0"
   },
   "require-dev": {
     "symfony/var-dumper": "^4.2",
